wp-content/themes/evestflorida/SCSS/uwpqf.scss
/*Find a Contractor query filter and display */

/*the ajax loading icon*/
.umloading {
	width:100%;
	height:44px;
	margin-top: 180px;
	background:rgba(255, 255, 255, 0.8) url('ajax_loader.gif') no-repeat 50% 50%;
	
}

#uwpqsf_id:after {
	content: "";
	display: table;
	clear: both;
}

.uwpqsf_class{
	width: 435px;
	display: block;
	height: auto;
}



.tax-select-0 {
	float: left;
	margin-left: 45px;
	margin-bottom: 25px;
	
	span {
		display: block;
		font-size: 18px;
		font-weight: 700;
		color: #219875;
	}
}

.tax-check-1 {
	float: right;
	margin-right: 45px;
	
}

#uwpqsf_id_key {
	margin: 25px 25px 0 45px;
}

.-keyword {
	display: block;
	width: 300px;
	margin: 25px 25px -25px 45px;
	font-size: 18px;
	font-weight: 700;
	color: #219875;
	text-transform: none;
}

#uwpqsffrom_860 > div:nth-child(6) {
	display: block;
	width: 200px;
	color: #555555;
	
}

.togglecheck {
	
	span {
		display: block;
		font-size: 18px;
		font-weight: 700;
		color: #219875;
	}
	
	label {
		float: left;
	}

	input[type=checkbox] {
		display: none;
		display: inline\9;
		position: absolute\9;
		width: 1px\9;
		height: 1px\9;
		padding: 0;
		margin: 0;
		outline: none;
	}
	 
	label {
		display:inline-block;
		margin: 1px -1px;
		padding: 4px 12px;
		font-size: 14px;
		line-height: 20px;
		color: #333;
		text-align: center;
		text-shadow: 0 1px 1px rgba(255,255,255,0.75);
		vertical-align: middle;
		cursor: pointer;
		background-color: #f5f5f5;
		background-image: linear-gradient(to bottom,#fff,#e6e6e6);
		background-repeat: repeat-x;
		border-radius: 1px;
		border: 1px solid #ccc;
		border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
		border-bottom-color: #b3b3b3;
		box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
	}
	
	.input-checked {
		background-image: none;
		outline: 0;
		box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
		background-color: #e0e0e0;
		color: #219875;
	}
}

#results {
	clear: both;
	padding-bottom: 70px;
	margin: 55px 45px 15px 45px;
	
	.result {
		display: inline-block;
		width: 267px;
		min-height: 400px;
		padding: 10px 10px;
		vertical-align: top;
		overflow: hidden;
		
		&:hover {
			background-color: #c5f1e5;
		}
	}
	
	p {
		line-height: 58px;
		display: inline-block;
		padding: 0 19px 0 10px;
		color: #555555;
	}
	
	a {
		display: block;
		min-height: 400px;
	}
	
	.contractor-img {
		height: 175px;
		background-size: cover;
	}
	
	h1 {
		text-align: center;	
	}
	
	h2 {
		font-size: 22px;
		margin: 10px 0;
	}
	
	hr {
		 border: 0;
		 height: 0;
		 border-top: 1px solid rgba(0, 0, 0, 0.1);
		 border-bottom: 1px solid rgba(255, 255, 255, 0.3);
		
	}
	
	.wp-pagenavi, .uwpqsfpagi {
		margin-top: 20px;	

		a {
			min-height: 0;
		}
	}
}

.upagicurrent {
	text-decoration: none;
    background: #219875;
    border: 1px solid #222;
    color: #fff;
    padding: 3px 7px;
    display: block;
    text-align: center;
    float: left;
    margin-right: 4px;
}

.upagievent {
	text-decoration: none;
    background: #666666;
    border: 1px solid #222;
    color: #fff;
    padding: 3px 7px;
    display: block;
    text-align: center;
    float: left;
    margin-right: 4px;
	
	&:hover {
		color: white;
	}
}

.contractor-right {
	width: 415px;
	height: auto;
	float: right;
	padding: 0 0 45px 20px;
	
	img {
		max-width: 100%;
		height: auto;
	}
	
	p {
		line-height: 58px;
		display: inline-block;
		padding: 0 25px 0 10px;
		font-weight: 700;
	}
}

.tag-image {
	float: left;
	margin: 5px 0;
}

.tag-unit {
	float: left;
}

.contractor-entry {
	
	h3 {
		color: #219875;
	}
	
	.entry {
		width: 435px;
		float: left;
		margin-bottom: 45px;
	}
	
	hr {
		 border: 0;
		 height: 0;
		 border-top: 1px solid rgba(0, 0, 0, 0.1);
		 border-bottom: 1px solid rgba(255, 255, 255, 0.3);
	}
	
	#contact {
		
		a {
			width: auto;
			display: inline-block;
			background-color: #555555;
			color: white;
			font-size: 16px;
			font-weight: 400;
			margin: 2px;
			padding: 5px 11px;
			border-radius: 7px;
			
			&:hover {
				background-color: #219875;
			}
		}
	}
}

#disclaimer {
	position: absolute;
	bottom: 0;
	width: 870px;
	padding-bottom: 14px;
	margin: 0 auto;
}

